--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "typescript.check.workspaceVersion": false
+  "typescript.check.workspaceVersion": false,
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "editor.formatOnSave": false
 }
