--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^2.5.3",
     "mock-socket": "^3.0.1",
     "mockery": "^1.7.0",
+    "ts-node": "^8.1.0",
     "tslint": "^3.15.1",
     "typemoq": "0.0.6",
     "typescript": "2.2.2"
